Fixed nav bar now scrolls to top when clicking on current page, dropdown menu is functional on smaller screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -356,35 +356,43 @@ footer {
   }
 }
 
-@media all and (min-width: 992px) {
-  .navbar .dropdown-menu-end {
-    right: 0;
-    left: auto;
-  }
+.navbar .dropdown-menu-end {
+  right: 0;
+  left: auto;
+}
+.navbar .nav-item .dropdown-menu {
+  display: block;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  margin-top: 0;
+}
+.navbar .nav-item:hover .nav-link {
+  color: #004785;
+}
+.navbar .dropdown-menu.fade-down {
+  top: 80%;
+  transform: rotateX(-75deg);
+  transform-origin: 0% 0%;
+}
+.navbar .dropdown-menu.fade-up {
+  top: 180%;
+}
+.navbar .nav-item:hover .dropdown-menu {
+  transition: 0.3s;
+  opacity: 1;
+  visibility: visible;
+  top: 100%;
+  transform: rotateX(0deg);
+}
+
+@media (max-width: 992px) {
   .navbar .nav-item .dropdown-menu {
-    display: block;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.3s;
-    margin-top: 0;
+    display: none;
   }
-  .navbar .nav-item:hover .nav-link {
-    color: #004785;
-  }
-  .navbar .dropdown-menu.fade-down {
-    top: 80%;
-    transform: rotateX(-75deg);
-    transform-origin: 0% 0%;
-  }
-  .navbar .dropdown-menu.fade-up {
-    top: 180%;
-  }
+
   .navbar .nav-item:hover .dropdown-menu {
-    transition: 0.3s;
-    opacity: 1;
-    visibility: visible;
-    top: 100%;
-    transform: rotateX(0deg);
+    display: block;
   }
 }
 
